--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="h-full" data-theme="autumn" lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" type="image/svg+xml" href="/shopping.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shop</title>
   </head>
